Fixed Pre-Wrap for text-areas

--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -77,3 +77,7 @@ a:hover .header-profile-image {
 body {
   overflow-x: hidden;
 }
+
+.line-breaker {
+  white-space: pre-wrap;
+}
